buildscript {
  ext {
    springBootVersion = '2.6.7' // 여기에 맞춰 버전을 변경
  }
  repositories {
    mavenCentral()
    jcenter()
  }
  dependencies {
    classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
  }
}


plugins {
  id 'java'
  id 'eclipse'
  id 'org.springframework.boot' version '2.6.7'
  id 'io.spring.dependency-management' version '1.0.12.RELEASE'
}

group 'com.example.jojoldu.book'
version '1.0-SNAPSHOT'
sourceCompatibility = '1.8'

repositories {
  mavenCentral()
}

dependencies {

  //롬북 의존성 추가
  implementation('org.projectlombok:lombok')
  annotationProcessor('org.projectlombok:lombok')

  testImplementation('org.springframework.boot:spring-boot-starter-test') {
    exclude group: 'org.mockito', module: 'mockito-core'
  }

  implementation('org.springframework.boot:spring-boot-starter-web')
  implementation('org.springframework.boot:spring-boot-starter-security')
//Spring Security 사용하기 위한 starter 추가
  /*implementation('org.thymeleaf.extras:thymeleaf-extras-springsecurity6')*/
//thymeleaf에서 Spring Security를 사용하기 위한 의존성 추가

  // spring data jpa 의존성 추가
  implementation('com.h2database:h2')
  implementation('org.springframework.boot:spring-boot-starter-data-jpa')
  // h2버전 다운 그레이드
  // runtimeOnly 'com.h2database:h2:1.4.197'

  // oauth2 관련 의존성 추가
  // spring security
  implementation('org.springframework.boot:spring-boot-starter-oauth2-client')
  testImplementation('org.springframework.security:spring-security-test')

  // session
  implementation('org.springframework.session:spring-session-jdbc')

}



test {
  useJUnitPlatform()
}